--- a/src/modules/mediaQuery/_app.sass
+++ b/src/modules/mediaQuery/_app.sass
@@ -1,11 +1,11 @@
 //breakpoints  
-$mobileS: 320px;
-$mobileM: 375px; // iphone
-$mobileL: 425px; // plus 414px
-$tablet: 768px;
-$laptop: 1024px;
-$laptopL: 1440px;
-$desktop: 2560px;
+$mobileS: 320px
+$mobileM: 375px // iphone
+$mobileL: 425px // plus 414px
+$tablet: 768px
+$laptop: 1024px
+$laptopL: 1440px
+$desktop: 2560px
 
 =device($point)
   @if $point == mobileS
