--- a/src/components/header/stylesheets/header.module.sass
+++ b/src/components/header/stylesheets/header.module.sass
@@ -10,7 +10,7 @@
   right: 0
   left: 0
   z-index: 3
-  background: rgb(125, 125, 125)
+  background: rgb(125,125,125)
 
 .content
   display: flex
@@ -28,7 +28,6 @@
   background: pink
   margin: 0 1rem
   font-size: 1.5rem
-
   &:hover, &:focus
     cursor: pointer
 
@@ -68,14 +67,11 @@
   .toggle_icon
     height: max-content
     margin: .6rem
-
     &:hover, &:blur
       .bar1
         transform: rotate(-45deg) translate(-9px, 6px)
-
       .bar2
         opacity: 0
-
       .bar3
         transform: rotate(45deg) translate(-8px, -8px)
 
@@ -90,7 +86,7 @@
     width: 80vw
     min-width: 120px
     height: 100vh
-    background: rgb(125, 125, 125)
+    background: rgb(125,125,125)
     color: white
     z-index: 1000
     display: flex
@@ -98,7 +94,7 @@
 
   .side_title
     width: 100%
-    background: rgb(65, 65, 65)
+    background: rgb(65,65,65)
     font-size: 1rem
     padding: .2rem .2rem .2rem .5rem
     display: flex
@@ -109,7 +105,6 @@
     font-size: 1.5rem
     margin-left: auto
     margin-right: 1rem
-
     &:hover
       cursor: pointer
 
@@ -119,8 +114,7 @@
     white-space: nowrap
     display: flex
     align-items: center
-    border-bottom: 1px solid rgba(0, 0, 0, .5)
-
+    border-bottom: 1px solid rgba(0,0,0,.5)
     &:hover
       cursor: pointer
       color: #0056b3
@@ -139,8 +133,6 @@
   .show
     transform: translate3d(0vw, 0, 0)
     transition: transform .5s linear
-
     + .toggle_icon
       display: none
-      
-  
+
